--- a/web/src/app/post-detail/post-detail.component.html
+++ b/web/src/app/post-detail/post-detail.component.html
@@ -1,15 +1,82 @@
-<ng-template [ngIf]="post">
-  <div class="media">
-    <div *ngFor="let item of post.items; index as i" class="item">
-      <img *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, item.filename)">
-      <video *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.username, item.thumb_image_filename)">
-        <source [src]="postService.getMediaPath(post.username, item.filename)" type="video/mp4">
-      </video>
-      <button nbButton (click)="delete(post, item)"><nb-icon icon="trash-2-outline"></nb-icon></button>
-    </div>
+<div class="container" *ngIf="post else notFound">
+  <nb-card *ngFor="let item of post.items; index as index">
+    <img mat-card-image *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, item.filename)">
+    <video mat-card-image *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.username, item.thumb_image_filename)">
+      <source [src]="postService.getMediaPath(post.username, item.filename)" type="video/mp4">
+    </video>
+    <nb-card-footer class="media">
+      <button nbButton ghost><nb-icon icon="star"></nb-icon></button>
+      <div>Index: {{ index }}</div>
+      <button 
+        nbButton ghost status="danger" 
+        (click)="showConfirmation(deletePostItemConfirmation, post.shortcode, item.index)"
+      ><nb-icon icon="trash-2-outline"></nb-icon></button>
+    </nb-card-footer>
+  </nb-card>
+  <nb-card>
+    <nb-card-header class="media">
+      <div>{{ post.username }}</div>
+      <div>{{ post.timestamp | date }}</div>
+    </nb-card-header>
+    <nb-card-body class="media">{{ post.caption }}</nb-card-body>
+    <nb-card-footer class="media">
+      <div class="shortcode">{{ post.shortcode }}</div>
+      <div class="buttons">
+        <button 
+          nbButton ghost status="warning" 
+          (click)="showConfirmation(updatePostUsernameConfirmation, post.shortcode)"
+        ><nb-icon icon="edit-2-outline"></nb-icon></button>
+        <button 
+          nbButton ghost status="danger" 
+          (click)="showConfirmation(deletePostConfirmation, post.shortcode)"
+        ><nb-icon icon="trash-2-outline"></nb-icon></button>
+      </div>
+    </nb-card-footer>
+  </nb-card>
+</div>
+<ng-template #notFound>
+  <div class="container">
+    <nb-card>
+      <nb-card-body>
+        Post cannot be found
+      </nb-card-body>
+    </nb-card>
   </div>
-  <div class="caption">
-    <b>{{ post.timestamp | date }}</b>
-    <div>{{ post.caption }}</div>
-  </div>
+</ng-template>
+<ng-template #deletePostConfirmation let-data let-ref="dialogRef">
+  <nb-card>
+    <nb-card-header>Delete Confirmation</nb-card-header>
+    <nb-card-body>
+      <p>Do you want to delete post {{ data.shortcode }}?</p>
+      <p>This action is not recoverable.</p>
+    </nb-card-body>
+    <nb-card-footer class="confirmation">
+      <button nbButton status="danger" size="small" (click)="deletePost(ref, data.shortcode)">Delete</button>
+      <button nbButton status="basic" size="small" (click)="ref.close()">Cancel</button>
+    </nb-card-footer>
+  </nb-card>
+</ng-template>
+<ng-template #deletePostItemConfirmation let-data let-ref="dialogRef">
+  <nb-card>
+    <nb-card-header>Delete Confirmation</nb-card-header>
+    <nb-card-body>
+      <p>Do you want to delete item {{ data.itemIndex }} of post {{ data.shortcode }}?</p>
+      <p>This action is not recoverable.</p>
+    </nb-card-body>
+    <nb-card-footer class="confirmation">
+      <button nbButton status="danger" size="small" (click)="deleteItem(ref, data.shortcode, data.itemIndex)">Delete</button>
+      <button nbButton status="basic" size="small" (click)="ref.close()">Cancel</button>
+    </nb-card-footer>
+  </nb-card>
+</ng-template>
+<ng-template #updatePostUsernameConfirmation let-data let-ref="dialogRef">
+  <nb-card>
+    <nb-card-header>Change User</nb-card-header>
+    <nb-card-body>
+      <p>Do you want to associate post <i>{{ data.shortcode }}</i> with a different user?</p>
+    </nb-card-body>
+    <nb-card-footer class="confirmation">
+      <button nbButton status="basic" size="small" (click)="ref.close()">Cancel</button>
+    </nb-card-footer>
+  </nb-card>
 </ng-template>
