--- a/web/src/app/post-detail/post-detail.component.scss
+++ b/web/src/app/post-detail/post-detail.component.scss
@@ -1,36 +1,53 @@
-div.media {
+div.container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-
-div.item {
-  position: relative;
-  > button {
-    position: absolute;
-    right: 0.5rem;
-    top: 0.5rem;
-    display: none;
-    z-index: 2;
-  }
-}
-
-div.item:hover > button {
-  display:block;
-}
-
-img {
-  width: 100%;
-}
-
-video {
-  max-width: 100%;
-}
-
-div.caption {
   padding: 1rem;
-  div {
-    max-width: 35rem;
-    word-wrap: break-word;
+  gap: 1rem;
+  height: calc(100vh - 5rem);
+  overflow: scroll;
+  position: fixed;
+
+  @media (max-width: 1500px) {
+    padding: 0.5rem;
+    gap: 0.5rem;
   }
+}
+
+nb-card {
+  img {
+    width: 100%;
+    border-radius: 4px 4px 0 0;
+  }
+  
+  video {
+    max-width: 100%;
+    max-height: 60rem;
+    border-radius: 4px 4px 0 0;
+  }
+
+  nb-card-header.media {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  nb-card-body.media {
+    overflow-wrap: anywhere;
+  }
+
+  nb-card-footer.media {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.25rem 1rem 0.25rem 1.5rem;
+    div.buttons {
+      display: flex;
+      gap: 0.25rem;
+    }
+  }
+
+  nb-card-footer.confirmation {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }  
 }
