--- a/web/src/app/posts-grid/posts-grid.component.scss
+++ b/web/src/app/posts-grid/posts-grid.component.scss
@@ -1,37 +1,70 @@
 @use '../../themes.scss' as *;
 
 div.container {
-  min-height: calc(100vh - 8rem);
-  margin: 0;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
   align-items: flex-start;
-  align-content: flex-start;
-  gap: 0.5rem;
-
-  div {
-    flex: 1 0 20%;
-    overflow: hidden;
-    max-width: calc(25% - 0.375rem);
-    aspect-ratio: 1;
-  }
-
-  div > img {
-    width:100%;
-    height:100%;
-    object-fit: cover;
-    border-radius: 0.25rem;
-  }
 }
 
 @include nb-install-component() {
-  div.active {
+  div.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    overflow: scroll;
+    padding: 1rem;
+    gap: 1rem;
+    flex: 12;
+  
+    @media (max-width: 1500px) {
+      padding: 0.5rem;
+      gap: 0.5rem;
+    }
+  
+    img {
+      width: 100%;
+      height: 100%;
+      aspect-ratio: 0.75;
+      object-fit: cover;
+      border-radius: 0.25rem;
+    }
+  
+    div.item {
+      position: relative;
+    }
+  
+    div.overlay {
+      position: absolute;
+      right: 0.25rem;
+      top: 0.25rem;
+      z-index: 2;
+      padding: 0.1rem;
+      border-radius: 0.25rem;
+      background-color: nb-theme(color-basic-400);
+    }
+  }
+  .active {
     border: none;
     border-radius: 0.25rem;
     box-shadow: 0 0 0 4px nb-theme(color-success-transparent-focus-border);
     outline: none;
     transition: .1s;
   }
+}
+
+div.loading {
+  flex: 12;
+  height: calc(100vh - 5rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+
+  nb-card {
+    padding: 0.5rem 0;
+  }
+}
+
+div.detail {
+  flex: 8;
+  min-width: 30rem;
+  max-width: 45rem;
 }
