--- a/web/src/app/posts-grid/posts-grid.component.html
+++ b/web/src/app/posts-grid/posts-grid.component.html
@@ -35,6 +35,8 @@
   </ng-template>
   <div class="detail">
     <post-detail *ngIf="selectedPost$ | async as selectedPost; else profileInfo" [post]="selectedPost"></post-detail>
-    <ng-template #profileInfo><profile-info></profile-info></ng-template>
+    <ng-template #profileInfo>
+      <profile-info *ngIf="selectedProfile$ | async as selectedProfile" [profile]="selectedProfile"></profile-info>
+    </ng-template>
   </div>
 </div>
