--- a/web/src/app/profile-info/profile-info.component.scss
+++ b/web/src/app/profile-info/profile-info.component.scss
@@ -1,7 +1,18 @@
 div.container {
+  display: flex;
+  flex-direction: column;
   padding: 1rem;
+  gap: 1rem;
+  height: calc(100vh - 5rem);
+  overflow: scroll;
+  position: fixed;
 
   @media (max-width: 1500px) {
     padding: 0.5rem;
+    gap: 0.5rem;
   }
+}
+
+nb-card-body.table-container {
+  padding: 0;
 }
