close post button

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -39,6 +39,9 @@
         <nb-option value="12">December</nb-option>
       </nb-select>
     </div>
+    <div class="trailing">
+      <button nbButton shape="round" size="small" status="info"><nb-icon icon="close"></nb-icon></button>
+    </div>
   </nb-layout-header>
   <nb-layout-column><router-outlet></router-outlet></nb-layout-column>
   <nb-sidebar responsive [(state)]="sidebarState">
