--- a/web/src/app/posts-grid/posts-grid.component.scss
+++ b/web/src/app/posts-grid/posts-grid.component.scss
@@ -41,6 +41,7 @@ div.container {
       background-color: nb-theme(color-basic-400);
     }
   }
+
   .active {
     border: none;
     border-radius: 0.25rem;
@@ -56,6 +57,7 @@ div.loading {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1rem 0.25rem 1rem 1rem;
   gap: 0.5rem;
 
   nb-card {
