profile task list

--- a/web/src/app/profile-info/profile-info.component.html
+++ b/web/src/app/profile-info/profile-info.component.html
@@ -29,12 +29,14 @@
       </nb-list>
     </nb-card-footer>
   </nb-card>
-  <nb-card>
+  <nb-card class="task-list">
     <nb-card-header>Tasks</nb-card-header>
-    <nb-list>
-      <nb-list-item *ngFor="let fruit of allColumns">
-        {{ fruit }}
+    <nb-list *ngIf="tasks$ | async as tasks">
+      <nb-list-item *ngFor="let task of tasks.tasks">
+        <div>{{ task.id }}</div>
+        <div>{{ task.post_count }}</div>
       </nb-list-item>
+      <nb-list-item *ngIf="tasks.tasks.length == 0">No Task</nb-list-item>
     </nb-list>
   </nb-card>
   <nb-card>
