--- a/web/src/app/profile-info/profile-info.component.html
+++ b/web/src/app/profile-info/profile-info.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="profile else notFound">
+<div class="container" *ngIf="username else notFound">
   <nb-card class="post-stats">
     <nb-card-header>Post Stats</nb-card-header>
     <nb-card-body *ngIf="stats$ | async as stats">
@@ -17,7 +17,7 @@
     </nb-card-body>
     <nb-card-footer>
       <nb-list>
-        <nb-list-item>
+        <!-- <nb-list-item>
           <div><b>Total Count</b></div>{{ profile.total_count | number }}
         </nb-list-item>
         <nb-list-item>
@@ -25,7 +25,7 @@
         </nb-list-item>
         <nb-list-item>
           <div><b>Latest</b></div>{{ profile.last_post_timestamp | date }}
-        </nb-list-item>
+        </nb-list-item> -->
       </nb-list>
     </nb-card-footer>
   </nb-card>
@@ -44,7 +44,7 @@
   </nb-card>
   <nb-card>
     <nb-card-header>Biography</nb-card-header>
-    <nb-card-body>{{ profile.biography }}</nb-card-body>
+    <!-- <nb-card-body>{{ profile.biography }}</nb-card-body> -->
   </nb-card>
 </div>
 <ng-template #notFound>
