--- a/web/src/app/profile-info/profile-info.component.html
+++ b/web/src/app/profile-info/profile-info.component.html
@@ -1,7 +1,7 @@
-<div class="container" *ngIf="username else notFound">
+<div class="container" *ngIf="profile$ | async as profile else notFound">
   <nb-card class="post-stats">
     <nb-card-header>Post Stats</nb-card-header>
-    <nb-card-body *ngIf="stats$ | async as stats">
+    <nb-card-body *ngIf="stats.length > 0">
       <table [nbTreeGrid]="stats" equalColumnsWidth>
         <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="allColumns"></tr>
         <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: allColumns"></tr>
@@ -17,7 +17,7 @@
     </nb-card-body>
     <nb-card-footer>
       <nb-list>
-        <!-- <nb-list-item>
+        <nb-list-item>
           <div><b>Total Count</b></div>{{ profile.total_count | number }}
         </nb-list-item>
         <nb-list-item>
@@ -25,7 +25,7 @@
         </nb-list-item>
         <nb-list-item>
           <div><b>Latest</b></div>{{ profile.last_post_timestamp | date }}
-        </nb-list-item> -->
+        </nb-list-item>
       </nb-list>
     </nb-card-footer>
   </nb-card>
