--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -7,6 +7,7 @@
     <div class="filter">
       <nb-select 
         placeholder="All Years" 
+        scrollStrategy="reposition"
         [(selected)]="year" 
         (selectedChange)="selectedYearChanged($event)"
       >
@@ -20,6 +21,7 @@
       </nb-select>
       <nb-select 
         placeholder="All Months"
+        scrollStrategy="reposition"
         [disabled]="year == undefined"
         [(selected)]="month"
         (selectedChange)="selectedMonthChanged($event)"
