--- a/web/src/app/profile-info/profile-info.component.html
+++ b/web/src/app/profile-info/profile-info.component.html
@@ -74,10 +74,18 @@
   </div>
 </ng-template>
 <ng-template #timeRangeTaskCreationDialog let-data let-ref="dialogRef">
-  <nb-card>
-    <nb-card-header>Create Job: Time Range</nb-card-header>
+  <nb-card class="task-creation-time-range">
+    <nb-card-header>Create Task: Time Range</nb-card-header>
     <nb-card-body>
-      <p>Do you want to associate post with a different user?</p>
+      <nb-calendar-range [(range)]="timeRangeTaskRange"></nb-calendar-range>
+      <div>
+        <b>Task Detail:</b>
+        <ul>
+          <li><b>Profile:</b> {{ data.user_display_name }}</li>
+          <li><b>Start From:</b> {{ this.timeRangeTaskRange.start | date }}</li>
+          <li><b>End Before:</b> {{ this.timeRangeTaskRange.end | date }}</li>
+        </ul>
+      </div>
     </nb-card-body>
     <nb-card-footer class="confirmation">
       <button nbButton status="basic" size="small" (click)="ref.close()">Cancel</button>
