--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -11,13 +11,8 @@
         [(selected)]="year" 
         (selectedChange)="selectedYearChanged($event)"
       >
-        <nb-option>All Years</nb-option>
-        <nb-option value="2023">2023</nb-option>
-        <nb-option value="2022">2022</nb-option>
-        <nb-option value="2021">2021</nb-option>
-        <nb-option value="2020">2020</nb-option>
-        <nb-option value="2019">2019</nb-option>
-        <nb-option value="2018">2018</nb-option>
+        <nb-option >All Years</nb-option>
+        <nb-option *ngFor='let item of [].constructor(10); let i = index' [value]="2023 - i">{{ 2023 - i }}</nb-option>
       </nb-select>
       <nb-select 
         placeholder="All Months"
