--- a/web/src/app/profile-info/profile-info.component.html
+++ b/web/src/app/profile-info/profile-info.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="profile$ | async as profile else notFound">
+<div class="container" *ngIf="profile$ | async as profile">
   <nb-card class="post-stats">
     <nb-card-header>Post Stats</nb-card-header>
     <nb-card-body *ngIf="stats.length > 0">
@@ -63,16 +63,6 @@
     <nb-card-body>{{ profile.biography }}</nb-card-body>
   </nb-card>
 </div>
-<ng-template #notFound>
-  <div class="container">
-    <nb-card accent="danger" style="width: 100%">
-      <nb-card-header>Error</nb-card-header>
-      <nb-card-body>
-        Profile cannot be found
-      </nb-card-body>
-    </nb-card>
-  </div>
-</ng-template>
 <ng-template #timeRangeTaskCreationDialog let-data let-ref="dialogRef">
   <nb-card class="task-creation-time-range">
     <nb-card-header>Create Task: Time Range</nb-card-header>
